templates/customer-center_template.yaml
---
# Source: customer-center/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-customer-center
  labels:
    helm.sh/chart: customer-center-0.2.31
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: customer-center
    app.kubernetes.io/version: "v3.3.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: customer-center
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: release-name-customer-center
  selector:
    app.kubernetes.io/name: customer-center
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: frontend
---
# Source: customer-center/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-customer-center
  labels:
    helm.sh/chart: customer-center-0.2.31
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: customer-center
    app.kubernetes.io/version: "v3.3.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: customer-center
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: customer-center
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: customer-center-0.2.31
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: customer-center
        app.kubernetes.io/version: "v3.3.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: customer-center
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: customer-center
          image: "ghcr.io/adfinis/customer-center/frontend:v3.3.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
            httpGet:
              path: /account/login
              port: 80
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
            httpGet:
              path: /account/login
              port: 80
          resources:
            {}
---
# Source: customer-center/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-customer-center
  labels:
    helm.sh/chart: customer-center-0.2.31
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: customer-center
    app.kubernetes.io/version: "v3.3.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: customer-center
    app.kubernetes.io/instance: release-name
spec:
  rules:
    - host: my.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-customer-center
                port:
                  number: 80
  tls:
    - hosts:
      - my.example.com
      secretName: customer-center-tls
